# 3DSeaBattle

./: CMakeLists.txt  ChooseColumn.h  ChooseCube.h  ChooseSide.h  Cube.h  DisplayCubes.h  Painting.h  PaintingCubes.h  README.md  Text.h  TwoPlayersEnter1.h  WorkWithKeys.h  forEnter1.h  forEnter3.h  forEnter5_OneCube.h  forEnter5_TwoCubes.h  hitSide_Player1.h  hitSide_Player2.h  main  main.cpp
.gitignore/: Painting_second_cube.h  Безымянный документ 1  код недобоя
